--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <img src="img/recognition.jpeg" alt="">
                     </div>
                     <div class="info__card">
-                        <div class="wrapper">
+                        <div class="wrapper-recognition">
                             <h1 class="title-recognition">
                                acreditación de  AMEVEA
                             </h1>
