add new features

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="estilos/css/estilos.css">
+    <link rel="stylesheet" href="estilos/css/index.css">
     <title>Document</title>
 </head> 
 <body>
@@ -22,10 +22,10 @@
               <nav class="menu" id="menu">
                     <ul>
                         <li>
-                            <a href="#">Inicio</a>
+                            <a href="/index.html">Inicio</a>
                         </li>
                         <li>
-                            <a href="#">Contactanos</a>
+                            <a href="/contact_us.html">Contactanos</a>
                         </li>
                         <li>
                             <a href="#">Conoce nuestro equipo</a>
