--- a/contact_us.html
+++ b/contact_us.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css">
     <link rel="stylesheet" href="./estilos/css/contact_us.css">
     <title>Document</title>
 </head>
@@ -116,6 +117,98 @@
                 </div>
             </div>
         </section>
+        <section class="direction-map">
+            <div class="map" id="map"></div>
+        </section>
+        <section class="emergency">
+            <div class="wrapper">
+                <h1 class="title-emergency">Para emergencias - fuera del horario de atención</h1>
+                <div class="grid">
+                    <div class="card">
+                        <div class="img__card">
+                            <img src="./img/card-emergency.jpeg" alt="">
+                        </div>
+                        <div class="paragraph__card">
+                            <h2 class="title__card">
+                                Especialidad y emergencias para mascotas en Lima
+                            </h2>
+                            <div class="text__card">
+                                <p>
+                                    Horario de emergencia de 8 a.m. a medianoche
+                                </p>
+                                <p>
+                                    Atención hospitalaria las 24 horas
+                                </p>
+                            </div>
+                            <div class="text__card">
+                                <p>
+                                    Lorem ipsum dolor sit amet.
+                                </p>
+                                 <p>
+                                    Lorem ipsum dolor sit amet.
+                                </p>
+                            </div>
+                            <div class="text__card">
+                                <p>
+                                   999-999-999
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="img__card">
+                            <img src="./img/card-emergency-2.jpg" alt="">
+                        </div>
+                        <div class="paragraph__card">
+                            <h2 class="title__card">
+                                Especialidad y emergencias para mascotas en provincias
+                            </h2>
+                            <div class="text__card">
+                                <p>
+                                    Horario de emergencia de 8 a.m. a medianoche
+                                </p>
+                                <p>
+                                    Atención hospitalaria las 24 horas
+                                </p>
+                            </div>
+                            <div class="text__card">
+                                <p>
+                                    Lorem ipsum dolor sit amet.
+                                </p>
+                                 <p>
+                                    Lorem ipsum dolor sit amet.
+                                </p>
+                            </div>
+                            <div class="text__card">
+                                <p>
+                                   999-999-999
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="info-company">
+            <div class="wrapper-info-company">
+                <div class="fax-number">
+                    <span class="title__fax-number">
+                        Numero Fax
+                    </span>
+                    <a class="text__fax-number" href="#">
+                        (051) 999-9999
+                    </a>
+                </div>
+                <div class="email">
+                    <span class="title__email">
+                        Email
+                    </span>
+                    <a class="text__email" href="#">
+                        contoso@hotmail.com
+                    </a>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <div class="wrapper">
@@ -141,5 +234,6 @@
         </div>
     </footer>
 </body>
+<script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
 <script src="js/script.js"></script>
 </html>
