add shadow header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head> 
 <body>
-    <header class="header">
+    <header id="header" class="header">
         <div class="wrapper">
             <div class="menu-burguer">
                 <a href="#" id="linkMenuBurguer">
@@ -85,7 +85,7 @@
                     <div class="info__card">
                         <div class="wrapper-recognition">
                             <h1 class="title-recognition">
-                               acreditación de  AMEVEA
+                               Acreditación de  AMEVEA
                             </h1>
                         <div class="paragraph-recognition first">
                                 <h2>
