--- a/contact_us.html
+++ b/contact_us.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header class="header">
+    <header id="header" class="header">
         <div class="wrapper">
             <div class="menu-burguer">
                 <a href="#" id="linkMenuBurguer">
