--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
               <nav class="menu" id="menu">
                     <ul>
                         <li>
-                            <a href="/index.html">Inicio</a>
+                            <a href="./index.html">Inicio</a>
                         </li>
                         <li>
-                            <a href="/contact_us.html">Contactanos</a>
+                            <a href="./contact_us.html">Contactanos</a>
                         </li>
                         <li>
                             <a href="#">Conoce nuestro equipo</a>
