add page meet the team

--- a/contact_us.html
+++ b/contact_us.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css">
     <link rel="stylesheet" href="./estilos/css/contact_us.css">
-    <title>Document</title>
+    <title>Contactanos</title>
 </head>
 <body>
     <header id="header" class="header">
@@ -29,7 +29,7 @@
                             <a href="./contact_us.html">Contactanos</a>
                         </li>
                         <li>
-                            <a href="#">Conoce nuestro equipo</a>
+                            <a href="./meet.html">Conoce nuestro equipo</a>
                         </li>
                         <li>
                             <a href="#">Farmacia a domicilio</a>
