--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="estilos/css/index.css">
-    <title>Document</title>
+    <title>Inicio</title>
 </head> 
 <body>
     <header id="header" class="header">
@@ -28,7 +28,7 @@
                             <a href="./contact_us.html">Contactanos</a>
                         </li>
                         <li>
-                            <a href="#">Conoce nuestro equipo</a>
+                            <a href="./meet.html">Conoce nuestro equipo</a>
                         </li>
                         <li>
                             <a href="#">Farmacia a domicilio</a>
