--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             <a href="./contact_us.html">Contactanos</a>
                         </li>
                         <li>
-                            <a href="./meet.html">Conoce nuestro equipo</a>
+                            <a href="./meet.html">Conoce al equipo</a>
                         </li>
                         <li>
                             <a href="#">Farmacia a domicilio</a>
@@ -91,16 +91,16 @@
                                 <h2>
                                     Estándar de excelencia veterinaria
                                 </h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est quo quam magni neque labore aperiam? At veniam unde nam ab impedit ea asperiores quia ipsam, quisquam, architecto alias, pariatur repudiandae assumenda tenetur facilis magni soluta temporibus aliquid a perferendis sequi.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est quo quam magni neque labore aperiam? At veniam unde nam ab impedit ea asperiores quia ipsam, quisquam, architecto alias, pariatur repudiandae assumenda.</p>
                         </div>
                         <div class="paragraph-recognition second">
                                 <h2>
-                                    Acreditado desde 2005
+                                    Acreditado desde 2005 
                                 </h2>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum non excepturi explicabo dolor laboriosam. Tempora dolorem ab eum quos dolor voluptates sed ex rem quasi, facilis aperiam reprehenderit ratione nemo. Architecto commodi error quam ipsam, sit soluta esse. Exercitationem, doloremque!</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum non excepturi explicabo dolor laboriosam. Tempora dolorem ab eum quos dolor voluptates sed ex rem quasi, facilis aperiam reprehenderit ratione nemo.</p>
                         </div>
                         <a class="btn-about-recognition" href="#">
-                            mas acerca de AMEVEA
+                            Mas acerca de AMEVEA
                         </a>
                         </div>
                     </div>
