--- a/meet.html
+++ b/meet.html
@@ -27,7 +27,7 @@
                             <a href="./contact_us.html">Contactanos</a>
                         </li>
                         <li>
-                            <a href="./meet.html">Conoce nuestro equipo</a>
+                            <a href="./meet.html">Conoce al equipo</a>
                         </li>
                         <li>
                             <a href="#">Farmacia a domicilio</a>
