--- a/contact_us.html
+++ b/contact_us.html
@@ -17,9 +17,11 @@
                     <img  src="./img/menu-burguer.png" alt="">
                 </a>
             </div>
-            <h1 class="name-company">
-                Clinica veterinaria MascoLife
-            </h1>
+            <div class="name-company">
+                <h1>
+                    Clinica veterinaria MascoLife
+                </h1>
+            </div>
               <nav class="menu" id="menu">
                     <ul>
                         <li>
