--- a/meet.html
+++ b/meet.html
@@ -15,9 +15,11 @@
                     <img  src="./img/menu-burguer.png" alt="">
                 </a>
             </div>
-            <h1 class="name-company">
-                Clinica veterinaria MascoLife
-            </h1>
+            <div class="name-company">
+                <h1>
+                    Clinica veterinaria MascoLife
+                </h1>
+            </div>
               <nav class="menu" id="menu">
                     <ul>
                         <li>
@@ -64,7 +66,7 @@
                         <img src="./img/meet-2.jpeg" alt="">
                     </div>
                     <div class="info__card">
-                        <h2 class="title-info__card">Enrique Fernandez, doctor veterinario</h2>
+                        <h2 class="title-info__card">Luis Advincula, doctor veterinario</h2>
                         <p class="text-info__card">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum mollitia sint tempore recusandae aliquid omnis! Odit mollitia earum error beatae, molestiae voluptatibus eaque ducimus dolorum iste eos doloribus unde dicta.</p>
                     </div>
                 </div>
