--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
                     <img  src="./img/menu-burguer.png" alt="">
                 </a>
             </div>
-            <h1 class="name-company">
-                Clinica veterinaria MascoLife
-            </h1>
+            <div class="name-company">
+                <h1>
+                    Clinica veterinaria MascoLife
+                </h1>
+            </div>
               <nav class="menu" id="menu">
                     <ul>
                         <li>
@@ -38,7 +40,7 @@
                         </li>
                     </ul>
                     <a  href="#" class="close-menu" id="closeMenu">
-                        X
+                        x
                     </a>
              </nav> 
         </div>
