--- a/contact_us.html
+++ b/contact_us.html
@@ -49,10 +49,12 @@
     <main>
         <div class="banner">
             <div class="request-appoiment">
-                Solicite una cita ahora
-                <a class="btn__request-appoiment" href="#">
-                    Programar aqui
-                </a>
+                <h2 class="title__request-appoiment">Solicite una cita ahora</h2>
+                <div class="btn__request-appoiment">
+                    <a  href="#">
+                        Programar aqui
+                    </a>
+                </div>
             </div>
         </div>
         <section class="home">
