add page home delivery pharmacy

--- a/contact_us.html
+++ b/contact_us.html
@@ -34,7 +34,7 @@
                             <a href="./meet.html">Conoce al equipo</a>
                         </li>
                         <li>
-                            <a href="#">Farmacia a domicilio</a>
+                            <a href="./home_delivery_pharmacy.html">Farmacia a domicilio</a>
                         </li>
                         <li>
                             <a href="#">Más</a>
@@ -116,7 +116,51 @@
                             Horas
                         </h1>
                         <div class="hours-info-about">
-                            Hoy dia cerrado
+                            <div id="showListHour" class="container-hours-info-about">
+                                <ul id="listHours" class="list-hours">
+                                    <li>
+                                        <a href="#">
+                                           Lun 08:00 am - 06:00 pm
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                           Mar 08:00 am - 06:00 pm
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                           Mier 08:00 am - 06:00 pm
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                           Jue 08:00 am - 06:00 pm
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                           Vier 08:00 am - 06:00 pm
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                           Sab 08:00 am - 02:00 pm
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                           Dom Cerrado
+                                        </a>
+                                    </li>
+                                </ul>
+                                <p id="todayHour">
+                                    Hoy día abierto 08:00 am - 06:00 pm
+                                </p>
+                                <div  class="icon-open-close">
+                                    <img src="./img/down-arrow.png" alt="">
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
