--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <a href="./meet.html">Conoce al equipo</a>
                         </li>
                         <li>
-                            <a href="#">Farmacia a domicilio</a>
+                            <a href="./home_delivery_pharmacy.html">Farmacia a domicilio</a>
                         </li>
                         <li>
                             <a href="#">Más</a>
