--- a/contact_us.html
+++ b/contact_us.html
@@ -36,12 +36,30 @@
                         <li>
                             <a href="./home_delivery_pharmacy.html">Farmacia a domicilio</a>
                         </li>
-                        <li>
-                            <a href="#">Más</a>
+                        <li id="liMoreMenu" class="li-more-menu">
+                            <div class="more-menu">
+                                <a id="moreId" class="more" href="#">
+                                    Más
+                                    <img src="./img/down-arrow.png" alt="">
+                                </a>
+                                <ul id="listMoreMenu" class="list-more-menu">
+                                    <li>
+                                        <a href="./home_delivery_pharmacy.html">Farmacia a domicilio</a>
+                                    </li>
+                                    <li>
+                                        <a href="./testimony.html">
+                                            Testimonios
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="li-Testimony-menu">
+                            <a href="./testimony.html">Testimonios</a>
                         </li>
                     </ul>
                     <a  href="#" class="close-menu" id="closeMenu">
-                        X
+                        x
                     </a>
              </nav> 
         </div>
