--- a/testimony.html
+++ b/testimony.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="estilos/css/home_delivery_pharmacy.css">
+    <link rel="stylesheet" href="./estilos/css/testimony.css">
     <title>Document</title>
 </head>
 <body>
@@ -64,45 +63,36 @@
         </div>
     </header>
     <main>
-        <section class="home-delivery-pharmacy">
+        <section class="">
+            <div class="wrapper">
+                <div class="title">Testimonios</div>
                 <div class="grid">
-                    <div class="card">
-                        <div class="img__card">
-                            <img src="./img/home-deliver-pharmacy.jpeg" alt="">
-                        </div>
-                        <div class="info__card">
-                            <div class="wrapper">
-                                <h1 class="title">
-                                    Farmacia en linea
-                                </h1>
-                                <h2 class="sub-title">
-                                    ¡Entrega directamente a tu casa!
-                                </h2>
-                                <div>
-                                    <p class="paragraph-1">
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, illum minus doloremque repellendus corporis placeat nostrum. Veniam accusantium et fugiat?
-                                    </p>
-                                    <p class="paragraph-2">
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. In voluptatem minus molestias possimus. Facere, voluptas! Reprehenderit cum voluptatem, voluptas magni repellendus odio doloremque ullam quasi et. Cumque nostrum vero sed.
-                                    </p>
-                                </div>
-                                <h2 class="sub-title">
-                                    Auto servicio
-                                </h2>
-                                <p class="paragraph-1">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, architecto illum! Nemo perspiciatis culpa aliquam cumque neque nulla, quod quasi!
-                                </p>
-                                <p class="paragraph-2">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque voluptates iusto quasi dolor iste dicta temporibus non quos quisquam deserunt.
-                                </p>
-                                <a href="" class="btn-info">
-                                    Haga clic aquí para navegar y ordenar
-                                </a>
-                            </div>
-                        </div>
+                    <div class="box">
+                       <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam quam eius sequi optio ducimus nostrum error dignissimos harum eos cupiditate nemo quisquam adipisci minus porro id rerum incidunt numquam atque, odit, odio inventore officiis cumque, deleniti autem? Laborum eligendi omnis consequatur quis mollitia architecto repellat. Iste dolore odit dicta quod?</p>
+                       <span>-Beto Ortiz</span>
                     </div>
+                    <div class="box">
+                        <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam quam eius sequi optio ducimus nostrum error dignissimos harum eos cupiditate nemo quisquam adipisci minus porro id rerum incidunt numquam atque, odit, odio inventore officiis cumque, deleniti autem? Laborum eligendi omnis consequatur quis mollitia architecto repellat. Iste dolore odit dicta quod?</p>
+                        <span>-Carlos Enriquez</span>
+                     </div>
+                     <div class="box">
+                        <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam quam eius sequi optio ducimus nostrum error dignissimos harum eos cupiditate nemo quisquam adipisci minus porro id rerum incidunt numquam atque, odit, odio inventore officiis cumque, deleniti autem? Laborum eligendi omnis consequatur quis mollitia architecto repellat. Iste dolore odit dicta quod?</p>
+                        <span>-Maria Torres</span>
+                     </div>
+                     <div class="box">
+                        <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam quam eius sequi optio ducimus nostrum error dignissimos harum eos cupiditate nemo quisquam adipisci minus porro id rerum incidunt numquam atque, odit, odio inventore officiis cumque, deleniti autem? Laborum eligendi omnis consequatur quis mollitia architecto repellat. Iste dolore odit dicta quod?</p>
+                        <span>-Jacinta Rosales</span>
+                     </div>
+                     <div class="box">
+                        <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam quam eius sequi optio ducimus nostrum error dignissimos harum eos cupiditate nemo quisquam adipisci minus porro id rerum incidunt numquam atque, odit, odio inventore officiis cumque, deleniti autem? Laborum eligendi omnis consequatur quis mollitia architecto repellat. Iste dolore odit dicta quod?</p>
+                        <span>-Carlos Villagran</span>
+                     </div>
+                     <div class="box">
+                        <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam quam eius sequi optio ducimus nostrum error dignissimos harum eos cupiditate nemo quisquam adipisci minus porro id rerum incidunt numquam atque, odit, odio inventore officiis cumque, deleniti autem? Laborum eligendi omnis consequatur quis mollitia architecto repellat. Iste dolore odit dicta quod?</p>
+                        <span>-Ricky Martin</span>
+                     </div>
                 </div>
-        
+            </div>
         </section>
     </main>
     <footer class="footer">
