--- a/contact_us.html
+++ b/contact_us.html
@@ -125,7 +125,7 @@
                             Clínica veterinaria complementaria
                         </h1>
                         <p class="address-info-about">
-                            105 Auburn Folsom Rd, Auburn, CA 95603, US
+                            Av. Contoso Anonimo # 991 Piso 9
                         </p>
                         <p class="number-info-about">
                             Telefono: 9999999
